--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,4 +1,4 @@
-name: CI worfklow
+name: CI workflow
 
 on:
   push:
@@ -11,19 +11,18 @@ jobs:
     runs-on: ubuntu-latest
     container: python:3.9-slim
     steps:
-    - name: checkout
-      uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
-    - name: Install Dependencies
-      run:  |
-        python -m pip install --upgrade pip
-        python install -r requirement.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Lint with flake8
-      run:  |
-        flake8 service --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 service --count --max-complexity=10 --max-line-length=127 --statistics
-    
-    - name: Run unit tests with nose
-      run: nosetests -v --with-spec --spec-color --with-coverage --cover-package=app
+      - name: Lint with flake8
+        run: |
+          flake8 service --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 service --count --max-complexity=10 --max-line-length=127 --statistics
 
+      - name: Run unit tests with nose
+        run: nosetests -v --with-spec --spec-color --with-coverage --cover-package=app
